Bug 157937 - EDITING Cycle case with change tracking freezes Writer
Summary: EDITING Cycle case with change tracking freezes Writer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords:
Depends on:
Blocks: Track-Changes
  Show dependency treegraph
 
Reported: 2023-10-26 20:29 UTC by László Németh
Modified: 2023-11-07 10:10 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2023-10-26 20:29:31 UTC
Cycle case can freeze LibreOffice.

Test case:

1. Open https://bugs.documentfoundation.org/attachment.cgi?id=190256 (test document of https://bugs.documentfoundation.org/show_bug.cgi?id=119908#c15);

2. Select the first paragraph e.g. by clicking 3 times before it;

3. Enable Record Track Changes;

4. Press Shift-F3 3 times to change cycle case. Writer freezes immediately.

Likely regression since commit 2d3c77e9b10f20091ef338e262ba7756eb280ce9
"tdf#109266 sw change tracking: track transliteration".
Comment 1 Commit Notification 2023-10-27 13:11:34 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e079bb35429603988d2fd4ddf18b0f501a847a2c

tdf#157937 sw: fix freezing of cycle case on tracked changes

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-11-01 23:53:13 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/f0a9b44059f76f79ffddfdc012026ff2c592b5c1

tdf#157937 sw: fix freezing of cycle case on tracked changes

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.